--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <p>Hello world PROD!</p>
 <p>This page generated with help of Jenkins</p>
 <p>This page taken from <font color=green>Github</font><p>
-<img src="learn_jenkins.jpeg"></img>
+<img src="vrio.jpg"></img>
 </body>
 </html>
