--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <p>Hello world PROD!</p>
 <p>This page generated with help of Jenkins</p>
 <p>This page taken from <font color=green>Github</font><p>
+<p><font size=15><b>Бери лопату, блеять!!1</b></font></p>
 <img src="vrio.jpg"></img>
 </body>
 </html>
