--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Jenkins deployment PrePROD</title>
 </head>
 <body bgcolor=#DADFA1>
-
+<meta charset=utf-8>
 <h1><font color=navy>This page generated with help of Jenkins!</font></h1>
 <p>Hello world PROD!</p>
 <p>This page generated with help of Jenkins</p>
